[package]
name = "tablefy_derive"
description = "A procedural macro to help Tablefy any struct!"
version = "0.2.1"
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/Calmynt/Tablefy"
authors = ["ENBYSS"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.93", features = ["extra-traits"]}
quote = "1.0.38"
proc-macro2 = "1.0.92"
